--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,8 +275,8 @@ header .container .fa-bars {
 }
 
 .singleService {
-    width: 400px;
-    height: 230px;
+    width: 400px; /* Change the fixed width to a maximum width */
+    min-height: 230px; /* Change height to min-height to allow for expansion */
     padding: 5px 15px;
     display: flex;
     flex-direction: column;
@@ -302,18 +302,25 @@ header .container .fa-bars {
 .serviceText {
     width: 100%;
     height: 100%;
-    padding: 15px 10px;
+    padding: 15px; /* Adjust padding as needed */
     position: absolute;
     top: 135px;
     left: 0;
     transition: .3s;
     background-color: #ff00;
+    box-sizing: border-box; /* Include padding in the width and height calculations */
+    overflow: hidden; /* Hide overflowing content */
 }
+
 .singleService:hover .serviceText {
     top: 0;
-    background-color: rgba(12, 25, 94, .5);
+    background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
+    height: auto; /* Remove fixed height to allow content to expand */
+    overflow-y: auto; /* Add this line to make the text scrollable if it exceeds the container height */
 }
+
+
 .singleService:hover .serviceText h3 {
     color: #fff;
 }
