--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,13 +37,18 @@ button:hover {
     padding: 10px 15px;
 }
 
-p {
-    text-align: justify; /* Justify text to create even line breaks */
+.text-container {
+    width: 80%; /* Set the width of the text container */
+    margin: 0 auto; /* Center the text container horizontally */
+}
+
+.text-container p {
+    text-align: justify; /* Justify text within the container */
     text-justify: inter-word; /* Specify inter-word justification for better spacing */
-    word-wrap: break-word; /* Allow long words to break and wrap within the container */
-    overflow-wrap: break-word; /* Ensure that long words break at the end of the line */
     hyphens: auto; /* Enable hyphenation to improve line breaks */
 }
+
+
 /* common styles ends */
 
 /* overlay styles */
